--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTEwNjQ5NDMxNTQzOTYwMzc0Mw.Gpn5m4.sh11HbngZvkdSv1DRRNRl9FS_x1tentiRfIgJg",
+    "token": "MTEwNjQ5NDMxNTQzOTYwMzc0Mw.G_FcVM.mgrgP8SYYw1vTtatUtR56S8-czJXPriagQEoKw",
     "clientId": "1106494315439603743",
     "guildId": "1051031918487011389"
 }
